chore: Dockerizando os microserviços